[MSE][Mac] Crash in SourceBuffer::sourceBufferPrivateDidReceiveRenderingError() https://bugs.webkit.org/show_bug.cgi?id=134211

Reviewed by Eric Carlson.

Null-check m_source before dereferencing, as the SourceBuffer may have been removed
from its MediaSource before this error was received.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveRenderingError):


Canonical link: https://commits.webkit.org/152176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170318 268f45cc-cd09-0410-ab3c-d52691b4dbfc